--- a/public/chat.html
+++ b/public/chat.html
@@ -14,7 +14,7 @@
                 <div id="messages" class="chat__messages"></div>
                 <div class="compose">
                     <form id="message-form">
-                        <input name="message" placeholder="Message">
+                        <input name="message" placeholder="Message" required autocomplete="off">
                         <button>Send</button>
                     </form>
                     <button id="send-location">Send location</button>                   
@@ -26,7 +26,7 @@
         <script id="message-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message__name">Some user name</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p>{{message}}</p>
@@ -36,7 +36,7 @@
         <script id="location-message-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message__name">Some user name</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p><a href="{{url}}" target="_blank">My current location</a></p>
